--- a/css/login.css
+++ b/css/login.css
@@ -9,7 +9,7 @@ h1 {
 }
 body {
 	/*background-image: linear-gradient(to right, #620A59, #FC8EFF, #FC8EFF, #FC8EFF, #620A59);*/
-	background-color: white;
+	background-color: #F9E7F5;
 }
 input {
   margin-bottom: 50px;
