--- a/css/agencies.css
+++ b/css/agencies.css
@@ -6,20 +6,34 @@ body {
 	background-image: url(../root/agency.jpg);
 	background-size: cover;
 	background-position: center;
-	position: relative;
 }
 .list-box {
-	margin-top: 100px;
+	margin-top: 50px;
     width: 50%;
-    height: 80%;
+    height: 90%;
     margin-left: auto;
     margin-right: auto;
     background-color: black;
     opacity: 0.6;
+    position: relative;
 }
 table {
-	height: 100%;
-	width: 100%;
+	height: 90%;
+	width: 90%;
 	color: white;
 	font-size: 20px;
+}
+input[type="submit"] {
+	margin-top: 10px;
+	font-size: 16px;
+	padding: 3px 6px;
+	border: 2px white solid;
+	background-color: black;
+	color: white;
+}
+.prev-btn {
+	margin-left: 10px;
+}
+.right-btn {
+	margin-left: 620px;
 }
