--- a/css/ShowPlace.css
+++ b/css/ShowPlace.css
@@ -15,6 +15,17 @@ td {
 	text-align: normal;
 	border: 10px solid #F1FCF0;
 }
+input {
+	margin-right: 30px;
+	height: 30px;
+	width: 60px;
+	background-color: #069F13 ;
+	color: white;
+	border: none;
+}
+input:hover {
+	background-color: red;
+}
 .image {
 	margin-top: 20px;
 	margin-left: auto;
@@ -22,7 +33,6 @@ td {
 	width: 1400px;
 	height: 500px;
 	border: 5px solid red;
-	background-image: url(../root/v1.jpg);
 	background-size: cover;
 	background-position: center;
 }
