--- a/css/admin.css
+++ b/css/admin.css
@@ -3,10 +3,29 @@
 	padding: 0;
 	outline: none;
 }
+#data table {
+   padding: 10px 10px;
+   font-size: 20px;
+   margin-left: auto;
+   margin-right: auto;
+   border: 2px solid black;
+}
+#data th, td {
+   width: 130px;
+   text-align: center;
+   padding: 10px 20px;
+}
+#data input[type="submit"] {
+   width: 50px;
+   height: 30px;
+   background-color: green;
+   border: none;
+   color: white;
+}
 .side-bar {
 	float: left;
 	width: 25%;
-	height: 100%;
+	height: 200%;
 	background-color: #824848;
 	position: relative;
 }
@@ -45,37 +64,33 @@
 	width: 75%;
 }
 .main-bar .button-collection {
-	margin-top: 80px;
-	margin-left: auto;
-	margin-right: auto;
-	height: 600px;
-	width: 800px;
+	margin-top: 0px;
+	height: 30%;
+	width: 100%;
 	background-color: white;
 	display: grid;
-	grid-template-columns: 1fr;
-	grid-row-gap: 30px;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-.main-bar .button-collection input[type="submit"] {
-	width: 800px;
+button {
+	width: 100%;
 	height: 100px;
 	border: none;
-	font-size: 50px;
+	font-size: 30px;
 	color: white;
-	border-radius: 60px;
 }
-.main-bar .button-collection input[type="submit"]:hover {
+.main-bar .button-collection button:hover {
 	height: 120px;
-	width: 820px;
+	width: 303px;
 }
-.main-bar .button-collection .button1 input[type="submit"] {
+.main-bar .button-collection .button1 button {
 	background-color: #1A626B;
 }
-.main-bar .button-collection .button2 input[type="submit"] {
+.main-bar .button-collection .button2 button {
     background-color: #8277A3;
 }
-.main-bar .button-collection .button3 input[type="submit"] {
+.main-bar .button-collection .button3 button {
     background-color: #E35B5B;
 }
-.main-bar .button-collection .button4 input[type="submit"] {
+.main-bar .button-collection .button4 button {
     background-color: #61D882;
 }
